nyanWrapper z-index fix

--- a/src/assets/nyancat.scss
+++ b/src/assets/nyancat.scss
@@ -33,6 +33,7 @@ $purple: #55ffa6;
 }
 
 .nyanWrapper {
+  z-index: -1;
   width: 50px;
   height: 85px;
   margin-bottom: 100px;
